completed html markup

--- a/final-project/index.html
+++ b/final-project/index.html
@@ -9,7 +9,97 @@
 </head>
 
 <body>
-  <div id="app"></div>
+
+  <header class="layout-ws">
+    <a href="#" class="logo">Ringston</a>
+    <a href="#" class="collection">
+      <span>Ring Collection</span>
+      <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/200/svg">
+        <circle cx="11.8533" cy="11.6795" r="9.89771" stroke="white" stroke-width="3" />
+      </svg>
+    </a>
+  </header>
+
+  <main class="hero">
+    <div class="left layout-ws">
+      <h1>
+        <div class="mask primary-h1">
+          <span>Relationships</span>
+        </div>
+        <div class="mask">
+          <span>Redefined</span>
+        </div>
+      </h1>
+    </div>
+    <div class="right">
+      <div class="vid-overlay"></div>
+      <video autoplay muted loop>
+        <source src="hands.mp4" type="video/mp4">
+      </video>
+    </div>
+  </main>
+
+  <section class="details">
+    <div class="inspection layout-ws">
+      <h2>68</h2>
+      <div class="ring-bg">
+        <p>Point Inspection</p>
+      </div>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perspiciatis ipsum repellat sapiente nisi quod,
+        nostrum molestiae ratione explicabo harum quaerat.</p>
+    </div>
+    <div class="mask marquee">
+      <h3>precision</h3>
+    </div>
+  </section>
+
+  <div class="no-overflow">
+    <section class="slider">
+      <div class="slide">
+        <div class="inner layout-ws">
+          <p class="slide-p">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Inventore quibusdam fugit
+            aspernatur rerum! Corporis, eum?</p>
+        </div>
+      </div>
+      <div class="slide">
+        <div class="inner layout-ws">
+          <p class="slide-p">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Inventore quibusdam fugit
+            aspernatur rerum! Corporis, eum?</p>
+        </div>
+      </div>
+      <div class="slide">
+        <div class="inner layout-ws">
+          <p class="slide-p">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Inventore quibusdam fugit
+            aspernatur rerum! Corporis, eum?</p>
+        </div>
+      </div>
+      <div class="progress"></div>
+    </section>
+  </div>
+
+  <section class="contact">
+    <div class="inner-contact">
+      <div class="line-top"></div>
+      <div class="layout-ws">
+        <div class="mask">
+          <h4>Reserve yours today.</h4>
+        </div>
+        <a href="3" class="cta">
+          <div class="mask">
+            <span>Put me on the list</span>
+          </div>
+        </a>
+        <p class="contact-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat minima itaque magnam
+          maiores dolor libero eius provident corrupti exercitationem nulla?</p>
+      </div>
+      <div class="line-bottom"></div>
+    </div>
+  </section>
+
+  <section></section>
+
+  <canvas class="webgl"></canvas>
+
   <script type="module" src="/main.js"></script>
 </body>
 
